--- a/MC-Clone/MCClone.vcxproj
+++ b/MC-Clone/MCClone.vcxproj
@@ -23,7 +23,7 @@
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{d89ddd91-6042-4d72-adb5-27bcd6e844a1}</ProjectGuid>
     <RootNamespace>MC-Clone</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
     <ProjectName>MC-Clone</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -44,12 +44,12 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -147,7 +147,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
-    <ClCompile Include="BlockRenderer.cpp" />
+    <ClCompile Include="BlockAtlas.cpp" />
+    <ClCompile Include="Chunk.cpp" />
+    <ClCompile Include="DirectionalLight.cpp" />
     <ClCompile Include="IndexBuffer.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="PerspectiveCamera.cpp" />
@@ -159,10 +161,15 @@
     <ClCompile Include="VertexBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="cpp.hint" />
     <None Include="res\shaders\Basic.shader" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BlockRenderer.h" />
+    <ClInclude Include="Block.h" />
+    <ClInclude Include="BlockAtlas.h" />
+    <ClInclude Include="Chunk.h" />
+    <ClInclude Include="DirectionalLight.h" />
+    <ClInclude Include="FastNoiseLite.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="PerspectiveCamera.h" />
     <ClInclude Include="IndexBuffer.h" />
