--- a/MC-Clone/imgui.ini
+++ b/MC-Clone/imgui.ini
@@ -18,3 +18,13 @@ Pos=0,0
 Size=1000,1000
 Collapsed=0
 
+[Window][Example: Documents]
+Pos=60,60
+Size=1048,1074
+Collapsed=0
+
+[Window][Block Menu]
+Pos=0,0
+Size=400,200
+Collapsed=0
+
