--- a/MC-Clone/MCClone.vcxproj
+++ b/MC-Clone/MCClone.vcxproj
@@ -23,7 +23,7 @@
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{d89ddd91-6042-4d72-adb5-27bcd6e844a1}</ProjectGuid>
     <RootNamespace>MC-Clone</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
     <ProjectName>MC-Clone</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -44,12 +44,12 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -152,7 +152,6 @@
     <ClCompile Include="BlockAtlas.cpp" />
     <ClCompile Include="Chunk.cpp" />
     <ClCompile Include="CollisionDetection.cpp" />
-    <ClCompile Include="CubemapTexture.cpp" />
     <ClCompile Include="DirectionalLight.cpp" />
     <ClCompile Include="imgui.cpp" />
     <ClCompile Include="imgui_demo.cpp" />
@@ -166,6 +165,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="Skybox.cpp" />
     <ClCompile Include="Statistics.cpp" />
     <ClCompile Include="stb_image.cpp" />
     <ClCompile Include="Texture.cpp" />
@@ -175,12 +175,12 @@
   <ItemGroup>
     <None Include="Line.shader" />
     <None Include="res\shaders\Chunk.shader" />
+    <None Include="res\shaders\Skybox.shader" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BlockAtlas.h" />
     <ClInclude Include="Chunk.h" />
     <ClInclude Include="CollisionDetection.h" />
-    <ClInclude Include="CubemapTexture.h" />
     <ClInclude Include="DirectionalLight.h" />
     <ClInclude Include="FastNoiseLite.h" />
     <ClInclude Include="imconfig.h" />
@@ -198,6 +198,7 @@
     <ClInclude Include="Ray.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="Skybox.h" />
     <ClInclude Include="Statistics.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="Texture.h" />
