--- a/MC-Clone/MCClone.vcxproj.filters
+++ b/MC-Clone/MCClone.vcxproj.filters
@@ -28,9 +28,6 @@
     <Filter Include="Vendor\ImGui">
       <UniqueIdentifier>{6ffd9f10-b081-48ce-99c9-6b1acad56e1c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Graphics">
-      <UniqueIdentifier>{1841280c-70b2-4e48-8c24-fa6540d9b266}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Physics">
       <UniqueIdentifier>{63f70b23-34c0-4ded-9b95-38910c31cb90}</UniqueIdentifier>
     </Filter>
@@ -39,6 +36,9 @@
     </Filter>
     <Filter Include="Utility">
       <UniqueIdentifier>{d86c80d7-48dd-49e1-9900-20104425394b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Rendering">
+      <UniqueIdentifier>{1841280c-70b2-4e48-8c24-fa6540d9b266}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -76,22 +76,22 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DirectionalLight.cpp">
-      <Filter>Graphics</Filter>
+      <Filter>Rendering</Filter>
     </ClCompile>
     <ClCompile Include="LineRenderer.cpp">
-      <Filter>Graphics</Filter>
+      <Filter>Rendering</Filter>
     </ClCompile>
     <ClCompile Include="PerspectiveCamera.cpp">
-      <Filter>Graphics</Filter>
+      <Filter>Rendering</Filter>
     </ClCompile>
     <ClCompile Include="Renderer.cpp">
-      <Filter>Graphics</Filter>
+      <Filter>Rendering</Filter>
     </ClCompile>
     <ClCompile Include="Shader.cpp">
-      <Filter>Graphics</Filter>
+      <Filter>Rendering</Filter>
     </ClCompile>
     <ClCompile Include="Texture.cpp">
-      <Filter>Graphics</Filter>
+      <Filter>Rendering</Filter>
     </ClCompile>
     <ClCompile Include="CollisionDetection.cpp">
       <Filter>Physics</Filter>
@@ -108,8 +108,8 @@
     <ClCompile Include="BlockAtlas.cpp">
       <Filter>Environment</Filter>
     </ClCompile>
-    <ClCompile Include="CubemapTexture.cpp">
-      <Filter>Graphics</Filter>
+    <ClCompile Include="Skybox.cpp">
+      <Filter>Rendering</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -153,22 +153,22 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DirectionalLight.h">
-      <Filter>Graphics</Filter>
+      <Filter>Rendering</Filter>
     </ClInclude>
     <ClInclude Include="PerspectiveCamera.h">
-      <Filter>Graphics</Filter>
+      <Filter>Rendering</Filter>
     </ClInclude>
     <ClInclude Include="Renderer.h">
-      <Filter>Graphics</Filter>
+      <Filter>Rendering</Filter>
     </ClInclude>
     <ClInclude Include="Shader.h">
-      <Filter>Graphics</Filter>
+      <Filter>Rendering</Filter>
     </ClInclude>
     <ClInclude Include="Texture.h">
-      <Filter>Graphics</Filter>
+      <Filter>Rendering</Filter>
     </ClInclude>
     <ClInclude Include="LineRenderer.h">
-      <Filter>Graphics</Filter>
+      <Filter>Rendering</Filter>
     </ClInclude>
     <ClInclude Include="Ray.h">
       <Filter>Physics</Filter>
@@ -188,8 +188,8 @@
     <ClInclude Include="BlockAtlas.h">
       <Filter>Environment</Filter>
     </ClInclude>
-    <ClInclude Include="CubemapTexture.h">
-      <Filter>Graphics</Filter>
+    <ClInclude Include="Skybox.h">
+      <Filter>Rendering</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -197,6 +197,9 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="Line.shader">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="res\shaders\Skybox.shader">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
