--- a/MC-Clone/MCClone.vcxproj.filters
+++ b/MC-Clone/MCClone.vcxproj.filters
@@ -116,9 +116,6 @@
     <ClInclude Include="stb_image.h">
       <Filter>Vendor\stb_image</Filter>
     </ClInclude>
-    <ClInclude Include="FastNoiseLite.h">
-      <Filter>Vendor\Noise</Filter>
-    </ClInclude>
     <ClInclude Include="Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -190,6 +187,9 @@
     </ClInclude>
     <ClInclude Include="Skybox.h">
       <Filter>Rendering</Filter>
+    </ClInclude>
+    <ClInclude Include="PerlinNoise.hpp">
+      <Filter>Vendor\Noise</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
