--- a/MC-Clone/MCClone.vcxproj
+++ b/MC-Clone/MCClone.vcxproj
@@ -158,6 +158,7 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="BlockAtlas.cpp" />
+    <ClCompile Include="BlockRenderer.cpp" />
     <ClCompile Include="Chunk.cpp" />
     <ClCompile Include="CollisionDetection.cpp" />
     <ClCompile Include="DirectionalLight.cpp" />
@@ -190,6 +191,7 @@
   <ItemGroup>
     <ClInclude Include="AABB.h" />
     <ClInclude Include="BlockAtlas.h" />
+    <ClInclude Include="BlockRenderer.h" />
     <ClInclude Include="Chunk.h" />
     <ClInclude Include="CollisionDetection.h" />
     <ClInclude Include="DirectionalLight.h" />
