--- a/MC-Clone/MCClone.vcxproj.filters
+++ b/MC-Clone/MCClone.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClCompile Include="Input.cpp">
       <Filter>Utility</Filter>
     </ClCompile>
+    <ClCompile Include="BlockRenderer.cpp">
+      <Filter>Rendering</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stb_image.h">
@@ -208,6 +211,9 @@
     </ClInclude>
     <ClInclude Include="Input.h">
       <Filter>Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="BlockRenderer.h">
+      <Filter>Rendering</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
